[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Weapons/Gun.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Weapons/Player/Gun/PlayerGun.gd" type="Script" id=2]
[ext_resource path="res://assets/interface/crosshair.png" type="Texture" id=3]

[node name="PlayerGun" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )
offset = Vector2( 5, 5 )
cam = NodePath("")

[node name="RayCast" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="HUD" type="CanvasLayer" parent="." index="3"]

[node name="Crosshair" type="TextureRect" parent="HUD" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )
expand = true

[node name="Hitmarker" type="TextureRect" parent="HUD" index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
expand = true

[node name="Timer" type="Timer" parent="HUD/Hitmarker" index="0"]

[node name="Audio" type="AudioStreamPlayer" parent="HUD/Hitmarker" index="1"]
[connection signal="headshot" from="." to="." method="_on_headshot"]
[connection signal="shoot" from="." to="." method="_shake_camera"]
[connection signal="shot" from="." to="." method="_on_shot"]
[connection signal="timeout" from="HUD/Hitmarker/Timer" to="." method="_on_Hitmarker_timeout"]
